@startuml

title __FABRICMETHOD's Class Diagram__\n

  namespace  {
    namespace om.example.fabricmethod {
      class com.example.fabricmethod.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.fabricmethod {
      class com.example.fabricmethod.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.fabricmethod {
      namespace model {
        class com.example.fabricmethod.model.Angle {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fabricmethod {
      namespace model {
        class com.example.fabricmethod.model.Circle {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fabricmethod {
      namespace model {
        interface com.example.fabricmethod.model.IFactory {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fabricmethod {
      namespace model {
        class com.example.fabricmethod.model.Lines {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fabricmethod {
      namespace model {
        abstract class com.example.fabricmethod.model.MyShape {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fabricmethod {
      namespace model {
        class com.example.fabricmethod.model.ShapeFactory {
        }
      }
    }
  }
  

  com.example.fabricmethod.HelloApplication -up-|> javafx.application.Application
  com.example.fabricmethod.model.Angle -up-|> com.example.fabricmethod.model.MyShape
  com.example.fabricmethod.model.Circle -up-|> com.example.fabricmethod.model.MyShape
  com.example.fabricmethod.model.Lines -up-|> com.example.fabricmethod.model.MyShape
  com.example.fabricmethod.model.ShapeFactory .up.|> com.example.fabricmethod.model.IFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
